postgres_tests/copy/expected.txt

-----------
QUERY:
--
-- COPY
--

-- directory paths are passed to us in environment variables
-- \getenv abs_srcdir '/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests'
-- \getenv abs_builddir '/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results'

--- test copying in CSV mode with various styles
--- of embedded line ending characters

create temp table copytest (
	style	text,
	test 	text,
	filler	int);
RESULT:
	postgres: None

-----------
QUERY:


insert into copytest values('DOS',E'abc\r\ndef',1);
RESULT:
	postgres: None

-----------
QUERY:

insert into copytest values('Unix',E'abc\ndef',2);
RESULT:
	postgres: None

-----------
QUERY:

insert into copytest values('Mac',E'abc\rdef',3);
RESULT:
	postgres: None

-----------
QUERY:

insert into copytest values(E'esc\\ape',E'a\\r\\\r\\\n\\nb',4);
RESULT:
	postgres: None

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results' '/results/copytest.csv'
copy copytest to /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv' csv;
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv" for writing: Datei oder Verzeichnis nicht gefunden
HINT:  COPY TO instructs the PostgreSQL server process to write a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


create temp table copytest2 (like copytest);
RESULT:
	postgres: None

-----------
QUERY:


copy copytest2 from /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv' csv;
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv" for reading: Datei oder Verzeichnis nicht gefunden
HINT:  COPY FROM instructs the PostgreSQL server process to read a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


select * from copytest except select * from copytest2;
RESULT:
	postgres: [('esc\\ape', 'a\\r\\\r\\\n\\nb', 4), ('DOS', 'abc\r\ndef', 1), ('Unix', 'abc\ndef', 2), ('Mac', 'abc\rdef', 3)]

-----------
QUERY:


truncate copytest2;
RESULT:
	postgres: None

-----------
QUERY:


--- same test but with an escape char different from quote char

copy copytest to /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv' csv quote '''' escape E'\\';
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv" for writing: Datei oder Verzeichnis nicht gefunden
HINT:  COPY TO instructs the PostgreSQL server process to write a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


copy copytest2 from /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv' csv quote '''' escape E'\\';
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/copytest.csv" for reading: Datei oder Verzeichnis nicht gefunden
HINT:  COPY FROM instructs the PostgreSQL server process to read a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


select * from copytest except select * from copytest2;
RESULT:
	postgres: [('esc\\ape', 'a\\r\\\r\\\n\\nb', 4), ('DOS', 'abc\r\ndef', 1), ('Unix', 'abc\ndef', 2), ('Mac', 'abc\rdef', 3)]

-----------
QUERY:



-- test header line feature

create temp table copytest3 (
	c1 int,
	"col with , comma" text,
	"col with "" quote"  int);
RESULT:
	postgres: None

-----------
QUERY:


copy copytest3 from stdin csv header;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

this is just a line full of junk that would error out if parsed
1,a,1
2,b,2
\.

copy copytest3 to stdout csv header;
RESULT:
	postgres: syntax error at or near "this"
LINE 2: this is just a line full of junk that would error out if par...
        ^


-----------
QUERY:


create temp table copytest4 (
	c1 int,
	"colname with tab: 	" text);
RESULT:
	postgres: None

-----------
QUERY:


copy copytest4 from stdin (header);
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

this is just a line full of junk that would error out if parsed
1	a
2	b
\.

copy copytest4 to stdout (header);
RESULT:
	postgres: syntax error at or near "this"
LINE 2: this is just a line full of junk that would error out if par...
        ^


-----------
QUERY:


-- test copy from with a partitioned table
create table parted_copytest (
	a int,
	b int,
	c text
) partition by list (b);
RESULT:
	postgres: None

-----------
QUERY:


create table parted_copytest_a1 (c text, b int, a int);
RESULT:
	postgres: None

-----------
QUERY:

create table parted_copytest_a2 (a int, c text, b int);
RESULT:
	postgres: None

-----------
QUERY:


alter table parted_copytest attach partition parted_copytest_a1 for values in(1);
RESULT:
	postgres: None

-----------
QUERY:

alter table parted_copytest attach partition parted_copytest_a2 for values in(2);
RESULT:
	postgres: None

-----------
QUERY:


-- We must insert enough rows to trigger multi-inserts.  These are only
-- enabled adaptively when there are few enough partition changes.
insert into parted_copytest select x,1,'One' from generate_series(1,1000) x;
RESULT:
	postgres: None

-----------
QUERY:

insert into parted_copytest select x,2,'Two' from generate_series(1001,1010) x;
RESULT:
	postgres: None

-----------
QUERY:

insert into parted_copytest select x,1,'One' from generate_series(1011,1020) x;
RESULT:
	postgres: None

-----------
QUERY:


-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results' '/results/parted_copytest.csv'
copy (select * from parted_copytest order by a) to /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv';
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv" for writing: Datei oder Verzeichnis nicht gefunden
HINT:  COPY TO instructs the PostgreSQL server process to write a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


truncate parted_copytest;
RESULT:
	postgres: None

-----------
QUERY:


copy parted_copytest from /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv';
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv" for reading: Datei oder Verzeichnis nicht gefunden
HINT:  COPY FROM instructs the PostgreSQL server process to read a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


-- Ensure COPY FREEZE errors for partitioned tables.
begin;
RESULT:
	postgres: None

-----------
QUERY:

truncate parted_copytest;
RESULT:
	postgres: None

-----------
QUERY:

copy parted_copytest from /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv' (freeze);
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv" for reading: Datei oder Verzeichnis nicht gefunden
HINT:  COPY FROM instructs the PostgreSQL server process to read a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:

rollback;
RESULT:
	postgres: None

-----------
QUERY:


select tableoid::regclass,count(*),sum(a) from parted_copytest
group by tableoid order by tableoid::regclass::name;
RESULT:
	postgres: []

-----------
QUERY:


truncate parted_copytest;
RESULT:
	postgres: None

-----------
QUERY:


-- create before insert row trigger on parted_copytest_a2
create function part_ins_func() returns trigger language plpgsql as $$
begin
  return new;
end;
$$;
RESULT:
	postgres: None

-----------
QUERY:


create trigger part_ins_trig
	before insert on parted_copytest_a2
	for each row
	execute procedure part_ins_func();
RESULT:
	postgres: None

-----------
QUERY:


copy parted_copytest from /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv';
RESULT:
	postgres: could not open file "/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_results/results/parted_copytest.csv" for reading: Datei oder Verzeichnis nicht gefunden
HINT:  COPY FROM instructs the PostgreSQL server process to read a file. You may want a client-side facility such as psql's \copy.


-----------
QUERY:


select tableoid::regclass,count(*),sum(a) from parted_copytest
group by tableoid order by tableoid::regclass::name;
RESULT:
	postgres: []

-----------
QUERY:


truncate table parted_copytest;
RESULT:
	postgres: None

-----------
QUERY:

create index on parted_copytest (b);
RESULT:
	postgres: None

-----------
QUERY:

drop trigger part_ins_trig on parted_copytest_a2;
RESULT:
	postgres: None

-----------
QUERY:


copy parted_copytest from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

1	1	str1
2	2	str2
\.

-- Ensure index entries were properly added during the copy.
select * from parted_copytest where b = 1;
RESULT:
	postgres: syntax error at or near "1"
LINE 2: 1 1 str1
        ^


-----------
QUERY:

select * from parted_copytest where b = 2;
RESULT:
	postgres: []

-----------
QUERY:


drop table parted_copytest;
RESULT:
	postgres: None

-----------
QUERY:


--
-- Progress reporting for COPY
--
create table tab_progress_reporting (
	name text,
	age int4,
	location point,
	salary int4,
	manager name
);
RESULT:
	postgres: None

-----------
QUERY:


-- Add a trigger to catch and print the contents of the catalog view
-- pg_stat_progress_copy during data insertion.  This allows to test
-- the validation of some progress reports for COPY FROM where the trigger
-- would fire.
create function notice_after_tab_progress_reporting() returns trigger AS
$$
declare report record;
begin
  -- The fields ignored here are the ones that may not remain
  -- consistent across multiple runs.  The sizes reported may differ
  -- across platforms, so just check if these are strictly positive.
  with progress_data as (
    select
       relid::regclass::text as relname,
       command,
       type,
       bytes_processed > 0 as has_bytes_processed,
       bytes_total > 0 as has_bytes_total,
       tuples_processed,
       tuples_excluded
      from pg_stat_progress_copy
      where pid = pg_backend_pid())
  select into report (to_jsonb(r)) as value
    from progress_data r;

  raise info 'progress: %', report.value::text;
  return new;
end;
$$ language plpgsql;
RESULT:
	postgres: None

-----------
QUERY:


create trigger check_after_tab_progress_reporting
	after insert on tab_progress_reporting
	for each statement
	execute function notice_after_tab_progress_reporting();
RESULT:
	postgres: None

-----------
QUERY:


-- Generate COPY FROM report with PIPE.
copy tab_progress_reporting from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

sharon	25	(15,12)	1000	sam
sam	30	(10,5)	2000	bill
bill	20	(11,10)	1000	sharon
\.

-- Generate COPY FROM report with FILE, with some excluded tuples.
truncate tab_progress_reporting;
RESULT:
	postgres: syntax error at or near "sharon"
LINE 2: sharon 25 (15,12) 1000 sam
        ^


-----------
QUERY:

-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/emp.data'
copy tab_progress_reporting from /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/emp.data'
	where (salary < 2000);
RESULT:
	postgres: None

-----------
QUERY:


drop trigger check_after_tab_progress_reporting on tab_progress_reporting;
RESULT:
	postgres: None

-----------
QUERY:

drop function notice_after_tab_progress_reporting();
RESULT:
	postgres: None

-----------
QUERY:

drop table tab_progress_reporting;
RESULT:
	postgres: None

-----------
QUERY:


-- Test header matching feature
create table header_copytest (
	a int,
	b int,
	c text
);
RESULT:
	postgres: None

-----------
QUERY:

-- Make sure it works with dropped columns
alter table header_copytest drop column c;
RESULT:
	postgres: None

-----------
QUERY:

alter table header_copytest add column c text;
RESULT:
	postgres: None

-----------
QUERY:

copy header_copytest to stdout with (header match);
RESULT:
	postgres: cannot use "match" with HEADER in COPY TO


-----------
QUERY:

copy header_copytest from stdin with (header wrong_choice);
RESULT:
	postgres: header requires a Boolean value or "match"


-----------
QUERY:

-- works
copy header_copytest from stdin with (header match);
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

a	b	c
1	2	foo
\.
copy header_copytest (c, a, b) from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a b c
        ^


-----------
QUERY:

c	a	b
bar	3	4
\.
copy header_copytest from stdin with (header match, format csv);
RESULT:
	postgres: syntax error at or near "c"
LINE 2: c a b
        ^


-----------
QUERY:

a,b,c
5,6,baz
\.
-- errors
copy header_copytest (c, b, a) from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a,b,c
        ^


-----------
QUERY:

a	b	c
1	2	foo
\.
copy header_copytest from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a b c
        ^


-----------
QUERY:

a	b	\N
1	2	foo
\.
copy header_copytest from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a b \N
        ^


-----------
QUERY:

a	b
1	2
\.
copy header_copytest from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a b
        ^


-----------
QUERY:

a	b	c	d
1	2	foo	bar
\.
copy header_copytest from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a b c d
        ^


-----------
QUERY:

a	b	d
1	2	foo
\.
SELECT * FROM header_copytest ORDER BY a;
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a b d
        ^


-----------
QUERY:


-- Drop an extra column, in the middle of the existing set.
alter table header_copytest drop column b;
RESULT:
	postgres: None

-----------
QUERY:

-- works
copy header_copytest (c, a) from stdin with (header match);
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

c	a
foo	7
\.
copy header_copytest (a, c) from stdin with (header match);
RESULT:
	postgres: syntax error at or near "c"
LINE 2: c a
        ^


-----------
QUERY:

a	c
8	foo
\.
-- errors
copy header_copytest from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a c
        ^


-----------
QUERY:

a	........pg.dropped.2........	c
1	2	foo
\.
copy header_copytest (a, c) from stdin with (header match);
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a ........pg.dropped.2........ c
        ^


-----------
QUERY:

a	c	b
1	foo	2
\.

SELECT * FROM header_copytest ORDER BY a;
RESULT:
	postgres: syntax error at or near "a"
LINE 2: a c b
        ^


-----------
QUERY:

drop table header_copytest;
RESULT:
	postgres: None

-----------
QUERY:


-- test COPY with overlong column defaults
create temp table oversized_column_default (
    col1 varchar(5) DEFAULT 'more than 5 chars',
    col2 varchar(5));
RESULT:
	postgres: None

-----------
QUERY:

-- normal COPY should work
copy oversized_column_default from stdin;
RESULT:
	postgres: can't execute COPY FROM: use the copy_from() method instead

-----------
QUERY:

\.
-- error if the column is excluded
copy oversized_column_default (col2) from stdin;
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \.
        ^


-----------
QUERY:

\.
-- error if the DEFAULT option is given
copy oversized_column_default from stdin (default '');
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \.
        ^


-----------
QUERY:

\.
drop table oversized_column_default;
RESULT:
	postgres: syntax error at or near "\"
LINE 2: \.
        ^


-----------
QUERY:



--
-- Create partitioned table that does not allow bulk insertions, to test bugs
-- related to the reuse of BulkInsertState across partitions (only done when
-- not using bulk insert).  Switching between partitions often makes it more
-- likely to encounter these bugs, so we just switch on roughly every insert
-- by having an even/odd number partition and inserting evenly distributed
-- data.
--
CREATE TABLE parted_si (
  id int not null,
  data text not null,
  -- prevent use of bulk insert by having a volatile function
  rand float8 not null default random()
)
PARTITION BY LIST((id % 2));
RESULT:
	postgres: None

-----------
QUERY:


CREATE TABLE parted_si_p_even PARTITION OF parted_si FOR VALUES IN (0);
RESULT:
	postgres: None

-----------
QUERY:

CREATE TABLE parted_si_p_odd PARTITION OF parted_si FOR VALUES IN (1);
RESULT:
	postgres: None

-----------
QUERY:


-- Test that bulk relation extension handles reusing a single BulkInsertState
-- across partitions.  Without the fix applied, this reliably reproduces
-- #18130 unless shared_buffers is extremely small (preventing any use use of
-- bulk relation extension). See
-- https://postgr.es/m/18130-7a86a7356a75209d%40postgresql.org
-- https://postgr.es/m/257696.1695670946%40sss.pgh.pa.us
-- \set filename /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests' '/data/desc.data'
COPY parted_si(id, data) FROM /* REPLACED */'/home/keuscha/Documents/FS2024/AST/project/AST24-SQL-dialects-comparison/postgres_tests/data/desc.data';
RESULT:
	postgres: None

-----------
QUERY:


-- An earlier bug (see commit b1ecb9b3fcf) could end up using a buffer from
-- the wrong partition. This test is *not* guaranteed to trigger that bug, but
-- does so when shared_buffers is small enough.  To test if we encountered the
-- bug, check that the partition condition isn/* REPLACED */''t violated.
SELECT tableoid::regclass, id % 2 = 0 is_even, count(*) from parted_si GROUP BY 1, 2 ORDER BY 1;
RESULT:
	postgres: [('parted_si_p_even', True, 5000), ('parted_si_p_odd', False, 5000)]

-----------
QUERY:


DROP TABLE parted_si;
RESULT:
	postgres: None
